--- a/PinchNZoom/app/src/main/res/values/strings.xml
+++ b/PinchNZoom/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PinchNZoom</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_image_view">ImageViewActivity</string>
+    <string name="title_activity_pinch_and_zoom">PinchAndZoom</string>
 </resources>
